feat: setup porject

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: Report a problem with your_plugin.nvim
+description: Report a problem with pretty-ts-errors.nvim
 title: "[Bug]: "
 labels:
   - bug
@@ -11,7 +11,7 @@ body:
         # Before reporting
 
         - Confirm that the problem is reproducible.
-        - Try using the [minimal reproduction template](https://github.com/your_github_user/your_plugin.nvim/blob/main/contrib/minimal.lua).
+        - Try using the [minimal reproduction template](https://github.com/AlejandroSuero/pretty-ts-errors.nvim/blob/main/contrib/minimal.lua).
 
   - type: checkboxes
     id: pre-requisites
@@ -35,8 +35,8 @@ body:
   - type: textarea
     id: nvim-version
     attributes:
-      label: NeoVim version
-      description: Paste here your NeoVim version, `nvim --version`.
+      label: Neovim version
+      description: Paste here your Neovim version, `nvim --version`.
       placeholder: |
         NVIM v0.10.0
         Build type: RelWithDebInfo
@@ -119,9 +119,9 @@ body:
 
         require("lazy").setup({
           {
-            "your_github_user/your_plugin.nvim",
+            "AlejandroSuero/pretty-ts-errors.nvim",
             config = function()
-              require("your_plugin").setup()
+              require("pretty-ts-errors").setup()
             end,
             lazy = false,
             enabled = true,
