--- a/.luarc.json
+++ b/.luarc.json
@@ -2,5 +2,6 @@
   "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
   "diagnostics": {
     "unusedLocalExclude": ["_*"]
-  }
+  },
+  "workspace.checkThirdParty": "false"
 }
